# germinate

./: .gitignore  MANIFEST.in  README  setup.cfg  setup.py  tox.ini
debian/: changelog  control  copyright  germinate.install  germinate.manpages  rules
debian/patches/: 0001-apply-old-patch.patch  0001-lliurex-patch.patch  0001-update-patch-to-noble-version.patch  0002-fix-errors-flake8.patch  0002-fix-flake8.patch  0003-another-patch.patch  series
debian/source/: format  options
germinate/: __init__.py  archive.py  defaults.py  germinator.py  log.py  seeds.py  tsort.py  version.py  version.txt
germinate/scripts/: germinate_main.py  germinate_pkg_diff.py  germinate_update_metapackage.py
germinate/tests/: helpers.py  test_archive.py  test_germinator.py  test_integration.py  test_lint.py  test_seeds.py  test_version.py
man/: germinate-pkg-diff.1  germinate-update-metapackage.1  germinate.1
