[metadata]
name = germinate
version = 2.44
description = Expand dependencies in a list of seed packages
author = Scott James Remnant
author_email = scott@ubuntu.com
maintainer = Colin Watson
maintainer_email = cjwatson@ubuntu.com
url = https://wiki.ubuntu.com/Germinate
license = GNU GPL

[options]
packages = find:
install_requires =
    # python-apt doesn't build an egg, so we can't use this.
    # apt >= 0.7.93
    importlib-metadata; python_version < "3.8"
scripts =
    bin/germinate
    bin/germinate-pkg-diff
    bin/germinate-update-metapackage
include_package_data = True

[options.data_files]
share/man/man1 =
    man/germinate.1
    man/germinate-pkg-diff.1
    man/germinate-update-metapackage.1

[options.extras_require]
test =
    fixtures
    flake8
    testtools

[flake8]
ignore =
    # Incompatible with Black.
    E203,
    W503
